--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,14 +6,14 @@ services:
     command:
       - redis-server
     env_file:
-      - ./app/.env
+      - .env
     restart: on-failure
     ports:
       - "6379:6379"
   db:
     image: postgres:15-alpine
     env_file:
-      - ./app/.env
+      - .env
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
@@ -21,7 +21,7 @@ services:
   bot:
     build: ./app
     env_file:
-      - ./app/.env
+      - .env
     depends_on:
       - redis
       - db
