--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    environment:
+      TZ: "Europe/Moscow"
   bot:
     build: .
     env_file:
